se agregan las demas paginas

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     
     <body>
         <header>
-            <a class="logo" href=""><img src="img/bombilla.png" alt="logo"></a>
+            <a class="logo" href="index.html"><img src="img/bombilla.png" alt="logo"></a>
             <nav>
                 <ul class="nav__links">
-                    <li><a href="#">Preguntas</a></li>
-                    <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Carreas</a></li>
+                    <li><a href="preguntas/index.html">Preguntas</a></li>
+                    <li><a href="nosotros/index.html">Nosotros</a></li>
+                    <li><a href="carreras/index.html">Carreras</a></li>
                 </ul>
             </nav>
             <a class="cta" href="#">Ingresar</a>
